@@ -1,3 +1,9 @@
+2009-02-13  Luca Ferretti  <elle.uca@libero.it>
+
+	* data/gnome-session.schemas.in:
+	Removed obsolete "logout_option" key; fix and update long
+	description for "required-components" key.
+
 2009-02-12  Lucas Rocha  <lucasr@gnome.org>
 
 	Bug 570908 – capplet misnomer
